--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>holy crap its purple outside</h1>
 <p>doing a little trolling</p>
 </body>
 </html>
