--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Go die<br />
 									In a hole</h1>
-									<p>suck my <strong>Cock</strong> and die. <a href="https://pornhub.com">(click on it)</a>. also remember to join the WAB discord server. <a href="https://discord.gg/wab">here</a>. </p>
+									<p>suck my <strong>Cock</strong> and die. <a href="https://pornhub.com">(click on it)</a>. also remember to join the WAB discord server <a href="https://discord.gg/wab">here</a>. </p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
