--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 <style>
 body {
   background-image: url('background.png');
-  background-repeat: no-repeat;
+  background-repeat: repeat;
 }
 </style>
 
