adding heading images

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 
 
-<style>
-body {
-  background-image: url('example_img_girl.jpg');
-  background-repeat: no-repeat;
-}
-</style>
-
 <html>
+
+<head>
+  <link rel="icon" type="image/png" href="/placegolder.png"/>
+  <title>Gary Niu's Portfolio Website</title>
+</head>
+
+
 <body>
 
 <h1>My First Heading</h1>
