--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>join the WAB discord</h1>
+<p>serv re redtared!!!! </p>
+<a href="https://discord.gg/wab" target="_blank">go clickon it or else you are retard faggot</a>
 
 <style>
 body {
