--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
 <body>
 
+<div align="center">
+ <marquee behavior="alternate" bgcolor="#bb3434" direction="left" height:="" 
+ loop="7" scrollamount="1" scrolldelay="2" width="100%">
+ <span style="font-size: 20px;color:#FFFFFF">
+ Latest news! Latest news! Latest news! Latest news!</span></marquee>
+</div>
+
 <h1>join the WAB discord</h1>
 <p>serv re redtared!!!! </p>
 <a href="https://discord.gg/wab" target="_blank">go clickon it or else you are retard faggot</a>
