--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <marquee behavior="alternate" bgcolor="#bb3434" direction="left" height:="" 
  loop="7" scrollamount="1" scrolldelay="2" width="100%">
  <span style="font-size: 20px;color:#FFFFFF">
- Latest news! Latest news! Latest news! Latest news!</span></marquee>
+     <a href="https://discord.gg/wab" target="_blank">join the wab discord server for 0 dogecoine</a></span></marquee>
 </div>
 
 <h1>join the WAB discord</h1>
