--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <style>
 body {
-  background-image: url('background.png');
+  background-image: url('background.jpg');
   background-repeat: repeat;
 }
 </style>
