--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
 <head>
   <link rel="icon" type="image/png" href="/placegolder.png"/>
   <title>Gary Niu's Portfolio Website</title>
+  <style>
+        body {
+            animation: fadeInAnimation ease 3s;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+        }
+        @keyframes fadeInAnimation {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+   </style>
 </head>
 
 
