--- a/index.html
+++ b/index.html
@@ -6,32 +6,12 @@
 <head>
   <link rel="icon" type="image/png" href="/placegolder.png"/>
   <title>Gary Niu's Portfolio Website</title>
-  <style>
-        body {
-            animation: fadeInAnimation ease 3s;
-            animation-iteration-count: 1;
-            animation-fill-mode: forwards;
-        }
-        @keyframes fadeInAnimation {
-            0% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
-   </style>
+  <link href="mycssfile.css" rel="stylesheet" type="text/css">
+
 </head>
 
 
 <body>
-
-<div align="center">
- <marquee behavior="alternate" bgcolor="#bb3434" direction="left" height:="" 
- loop="7" scrollamount="1" scrolldelay="2" width="100%">
- <span style="font-size: 20px;color:#FFFFFF">
-     <a href="https://discord.gg/wab" target="_blank">join the wab discord server for 0 dogecoine</a></span></marquee>
-</div>
 
 <h1>join the WAB discord</h1>
 <p>serv re redtared!!!! </p>
