--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <body>
 
+<div class="fade-out">
+   <img src="blackfade.jpg">
+</div>
+
 <h1>join the WAB discord</h1>
 <p>serv re redtared!!!! </p>
 <a href="https://discord.gg/wab" target="_blank">go clickon it or else you are retard faggot</a>
