--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </div>
 
 <h1>join the WAB discord</h1>
-<p>serv re redtared!!!! </p>
-<a href="https://discord.gg/wab" target="_blank">go clickon it or else you are retard faggot</a>
+<p>serv re !!!! </p>
+<a href="https://discord.gg/wab" target="_blank">go clickon it or else you are</a>
 
 <style>
 body {
